# platform.core.security.privacy-manager

./: CMakeLists.txt  capi-security-privacy-manager.pc.in  privacy-manager-client.pc.in  privacy-manager-server.pc.in  project.config
capi/: CMakeLists.txt
capi/include/: privacy_info.h  privacy_manager.h  privacy_manager_types_private.h
capi/src/: privacy-manager.c  privacy_info.c  privacy_manager.c
client/: CMakeLists.txt
client/inc/: PrivacyChecker.h  PrivacyManager.h  PrivacyManagerClient.h  SocketClient.h  privacy_checker_client.h  privacy_info_client.h  privacy_manager_client.h
client/src/: PrivacyChecker.cpp  PrivacyManager.cpp  PrivacyManagerClient.cpp  SocketClient.cpp  privacy_checker_client.cpp  privacy_info_client.cpp  privacy_manager_client.cpp  privacy_manager_client_internal_types.h
common/: CMakeLists.txt
common/inc/: IPrivacyManager.h  PrivacyDb.h  PrivacyIdInfo.h  PrivacyInfo.h  PrivacyManagerTypes.h  SocketConnection.h  SocketStream.h  Utils.h  privacy_manager_client_types.h
common/src/: PrivacyDb.cpp  PrivacyIdInfo.cpp  SocketConnection.cpp  SocketStream.cpp  Utils.cpp
packaging/: priavcy-manager.manifest  privacy-manager-server.changes  privacy-manager-server.manifest  privacy-manager-server.service  privacy-manager-server.spec  privacy-manager.changes  privacy-manager.spec  tizenprv00.privacy-popup.manifest  tizenprv00.privacy-popup.xml
pkgmgr_plugin/: CMakeLists.txt  privileges.cpp
privacy-popup/: CMakeLists.txt  privacy-popup.c  privacy-popup.h
res/etc/rc.d/init.d/: privacy-manager-server.sh
res/opt/dbspace/: .privacylist.db
res/usr/share/privacy-manager/: privacy-filter-list.ini
server/: CMakeLists.txt
server/inc/: NotificationServer.h  PrivacyInfoService.h  PrivacyManagerDaemon.h  PrivacyManagerServer.h  SocketService.h  TestService.h  privacy_manager_daemon.h
server/src/: CMakeLists.txt  NotificationServer.cpp  PrivacyManagerDaemon.cpp  PrivacyManagerServer.cpp  SocketService.cpp  main.cpp  privacy_manager_daemon.cpp
server/src/service/: PrivacyInfoService.cpp  TestService.cpp
test/: CMakeLists.txt  TestMain.cpp
