CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

MESSAGE("build privacy-manager")

SET(CMAKE_VERBOSE_MAKEFILE OFF)

IF("${USE_AUTOSTART}" STREQUAL "1")
	ADD_DEFINITIONS("-DUSE_AUTOSTART")
ENDIF()

ADD_DEFINITIONS("-DCLIENT_IPC_THREAD")
ADD_DEFINITIONS("-DUSE_IPC_EPOLL")

ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(client)
#ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(capi)
